# torchmesh

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: calculus_demo.py  cow_remesh.py  curvature_demo.py  neighbors_demo.py  torchmesh_logo.py  visualization_demo.py  visualize_normal_consistency.py
examples/logo/: torchmesh_logo.py
examples/readme_examples/: airplane.py  airplane_basic.py  airplane_curvature.py  derivative_example.py  repr_examples.py
paper/joss/: compile.sh  paper.bib  paper.md
src/torchmesh/: __init__.py  examples.py  mesh.py
src/torchmesh/boundaries/: __init__.py  _boundary_extraction.py  _cleaning.py  _detection.py  _facet_extraction.py  _topology.py
src/torchmesh/calculus/: README.md  __init__.py  _circumcentric_dual.py  _exterior_derivative.py  _hodge_star.py  _lsq_intrinsic.py  _lsq_reconstruction.py  _pca_tangent.py  _sharp_flat.py  curl.py  derivatives.py  divergence.py  gradient.py  laplacian.py
src/torchmesh/curvature/: __init__.py  _angles.py  _laplacian.py  _utils.py  _voronoi.py  gaussian.py  mean.py
src/torchmesh/examples/: README.md  __init__.py  text.py
src/torchmesh/examples/basic/: __init__.py  single_edge_2d.py  single_edge_3d.py  single_point_2d.py  single_point_3d.py  single_tetrahedron.py  single_triangle_2d.py  single_triangle_3d.py  three_edges_2d.py  three_edges_3d.py  three_points_2d.py  three_points_3d.py  two_tetrahedra.py  two_triangles_2d.py  two_triangles_3d.py
src/torchmesh/examples/curves/: __init__.py  circle_2d.py  circle_3d.py  circular_arc_2d.py  ellipse_2d.py  helix_3d.py  line_segment_1d.py  line_segments_1d.py  polyline_2d.py  spiral_2d.py  spline_3d.py  straight_line_2d.py  straight_line_3d.py  trefoil_knot_3d.py
src/torchmesh/geometry/: __init__.py  dual_meshes.py  interpolation.py  support_volumes.py
src/torchmesh/io/: io_pyvista.py
src/torchmesh/kernels/: __init__.py  facet_extraction.py
src/torchmesh/neighbors/: __init__.py  _adjacency.py  _cell_neighbors.py  _point_neighbors.py
src/torchmesh/projections/: __init__.py  _embed.py  _extrude.py
src/torchmesh/remeshing/: __init__.py  _remeshing.py
src/torchmesh/repair/: __init__.py  degenerate_removal.py  duplicate_removal.py  hole_filling.py  isolated_removal.py  manifold_repair.py  orientation.py  pipeline.py
src/torchmesh/sampling/: sample_data.py  sample_data_hierarchical.py
src/torchmesh/smoothing/: __init__.py  laplacian.py
src/torchmesh/spatial/: bvh.py
src/torchmesh/subdivision/: __init__.py  _data.py  _topology.py  butterfly.py  linear.py  loop.py
src/torchmesh/transformations/: __init__.py  geometric.py
src/torchmesh/utilities/: __init__.py  _cache.py  _scatter_ops.py  mesh_repr.py
src/torchmesh/validation/: __init__.py  quality.py  statistics.py  validate.py
src/torchmesh/visualization/: _matplotlib_impl.py  _pyvista_impl.py  draw_mesh.py
test/: conftest.py  test_angle_sums.py  test_angles_comprehensive.py  test_calculus.py  test_calculus_comprehensive.py  test_curvature.py  test_curvature_gauss_bonnet.py  test_io.py  test_laplacian_comprehensive.py  test_neighbors.py  test_optimizations.py  test_pca_tangent.py  test_point_normals.py  test_projections.py  test_subdivision.py  test_transformations.py  test_transformations_comprehensive.py  test_utilities.py  test_validation_comprehensive.py  test_validation_edge_cases.py  test_vectorization_correctness.py  test_visualization.py  test_voronoi_tets.py
test/boundaries/: test_boundary_extraction.py  test_cleaning.py  test_detection.py  test_facet_extraction.py  test_facet_extraction_cache_isolation.py  test_topology.py
test/calculus/: test_calculus.py  test_laplacian_comprehensive.py  test_pca_tangent.py  test_sharp_flat_rigorous.py
test/curvature/: test_angle_sums.py  test_angles_comprehensive.py  test_curvature.py  test_curvature_gauss_bonnet.py  test_voronoi_tets.py
test/examples/: test_basic.py  test_planar.py  test_procedural.py  test_procedural_noise.py  test_pyvista_datasets.py  test_text.py  test_volumes.py
test/geometry/: test_dual_volumes_obtuse.py
test/io/: test_data_preservation.py  test_error_handling.py  test_from_pyvista_0d.py  test_from_pyvista_3d.py  test_round_trip.py
test/mesh/: test_data_conversion.py  test_repr.py
test/misc/: test_optimizations.py  test_vectorization_correctness.py
test/neighbors/: test_neighbors.py
test/projections/: test_point_normals.py  test_projections.py
test/sampling/: test_hierarchical_equivalence.py  test_mesh_integration.py  test_random_point_sampling.py  test_sample_data.py
test/smoothing/: test_laplacian_smoothing.py
test/spatial/: test_bvh.py
test/subdivision/: test_subdivision.py
test/test_boundaries/: test_boundary_extraction.py  test_cleaning.py  test_detection.py  test_facet_extraction.py  test_facet_extraction_cache_isolation.py  test_topology.py
test/test_examples/: __init__.py  test_basic.py  test_curves.py  test_planar.py  test_procedural.py  test_procedural_noise.py  test_pyvista_datasets.py  test_surfaces.py  test_text.py  test_volumes.py
test/test_io/: __init__.py  test_data_array_shapes.py  test_data_preservation.py  test_error_handling.py  test_from_pyvista_0d.py  test_from_pyvista_1d.py  test_from_pyvista_2d.py  test_from_pyvista_3d.py  test_mesh_equivalence.py  test_pyvista_example_datasets.py  test_round_trip.py  test_to_pyvista.py
test/test_kernels/: test_facet_extraction.py  test_facet_extraction_cache_isolation.py
test/test_mesh/: __init__.py  test_data_conversion.py
test/test_repair/: test_repair_comprehensive.py
test/test_sampling/: __init__.py  test_hierarchical_equivalence.py  test_random_point_sampling.py  test_sample_data.py
test/test_smoothing/: __init__.py  test_laplacian_smoothing.py
test/test_spatial/: __init__.py  test_bvh.py
test/transformations/: test_transformations.py  test_transformations_comprehensive.py
test/utilities/: test_utilities.py
test/validation/: test_validation_comprehensive.py  test_validation_edge_cases.py
test/visualization/: test_visualization.py
(+43 files in other folders)
