[project]
name = "torchmesh"
version = "0.1.0"
description = "GPU-Accelerated Mesh Processing for Physical Simulation and Scientific Visualization in Any Dimension"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Peter Sharpe", email = "peterdsharpe@gmail.com" }
]
requires-python = ">=3.13"
keywords = ["mesh", "pytorch", "gpu", "cfd", "fem", "graphics", "geometry", "calculus", "curvature", "subdivision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "tensordict>=0.10.0",
    "torch>=2.9.0",
]

[project.urls]
Homepage = "https://github.com/peterdsharpe/torchmesh"
Documentation = "https://github.com/peterdsharpe/torchmesh"
Repository = "https://github.com/peterdsharpe/torchmesh"
Issues = "https://github.com/peterdsharpe/torchmesh/issues"
Discussions = "https://github.com/peterdsharpe/torchmesh/discussions"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[project.optional-dependencies]
io = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pyvista>=0.46.4",
]
remeshing = [
    "pyacvd>=0.2.10",
]
dev = [
    "ipykernel>=7.1.0",
    "ipython>=9.6.0",
    "pytest>=8.4.2",
    "numpy>=2.3.4",
    "pyvista[all]>=0.46.4",
    "trame>=3.12.0",
    "matplotlib>=3.10.7",
    "coverage>=7.11.0",
    "pytest-cov>=7.0.0",
    "scipy>=1.16.3",
    "pyacvd>=0.2.10",
]
cu130 = ["torch"]
cu128 = ["torch"]
cu126 = ["torch"]
cpu = ["torch"]

[dependency-groups]
io = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pyvista>=0.46.4",
]
remeshing = [
    "pyacvd>=0.2.10",
]
dev = [
    "ipykernel>=7.1.0",
    "ipython>=9.6.0",
    "pytest>=8.4.2",
    "numpy>=2.3.4",
    "pyvista[all]>=0.46.4",
    "trame>=3.12.0",
    "matplotlib>=3.10.7",
    "coverage>=7.11.0",
    "pytest-cov>=7.0.0",
    "scipy>=1.16.3",
    "pyacvd>=0.2.10",
]

[tool.uv]
package = true
prerelease="allow"
index-strategy="unsafe-best-match"
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
conflicts = [
    [
        { extra = "cu130" },
        { extra = "cu128" },
        { extra = "cu126" },
        { extra = "cpu" },
    ]
]

[tool.uv.sources]
torch = [
    { index = "pytorch-nightly-cu130", extra = "cu130" },
    { index = "pytorch-nightly-cu128", extra = "cu128" },
    { index = "pytorch-nightly-cu126", extra = "cu126" },
    { index = "pytorch-nightly-cpu", extra = "cpu" },
]

[[tool.uv.index]]
name = "pytorch-index"
url = "https://download.pytorch.org/whl/"
[[tool.uv.index]]
name = "pytorch-nightly-cu130"
url = "https://download.pytorch.org/whl/nightly/cu130"
[[tool.uv.index]]
name = "pytorch-nightly-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
[[tool.uv.index]]
name = "pytorch-nightly-cu126"
url = "https://download.pytorch.org/whl/nightly/cu126"
[[tool.uv.index]]
name = "pytorch-nightly-cpu"
url = "https://download.pytorch.org/whl/nightly/cpu"

[tool.pytest.ini_options]
markers = [
    "cuda: marks tests that require CUDA (deselect with '-m \"not cuda\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py313"

# Allow unused imports (F401) only in __init__.py files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
